[gd_scene load_steps=5 format=2]

[ext_resource path="res://level_editor/LevelInfoEdit.gd" type="Script" id=1]
[ext_resource path="res://default_styleboxtexture.tres" type="StyleBox" id=2]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://AccessibleSpinBox.gd" type="Script" id=4]

[node name="LevelInfoEdit" type="Node2D"]
script = ExtResource( 1 )

[node name="Holder" type="Label" parent="."]
margin_left = 153.0
margin_top = 9.0
margin_right = 376.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 129, 100 )
theme = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Level Info:"
align = 1

[node name="OkButton" type="Button" parent="Holder"]
margin_left = 57.0
margin_top = 263.0
margin_right = 168.0
margin_bottom = 278.0
text = "Ok"

[node name="HeavyMoves" type="SpinBox" parent="Holder"]
margin_left = 8.0
margin_top = 98.0
margin_right = 82.0
margin_bottom = 122.0
max_value = 999.0
value = 6.0
script = ExtResource( 4 )

[node name="MusicTrack" type="SpinBox" parent="Holder"]
margin_left = 8.0
margin_top = 179.0
margin_right = 82.0
margin_bottom = 203.0
min_value = -2.0
max_value = 999.0
value = 6.0
script = ExtResource( 4 )

[node name="LightMoves" type="SpinBox" parent="Holder"]
margin_left = 8.0
margin_top = 124.0
margin_right = 82.0
margin_bottom = 148.0
max_value = 999.0
value = 6.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Holder"]
margin_left = 83.0
margin_top = 105.0
margin_right = 147.0
margin_bottom = 116.0
text = "Heavy Moves"

[node name="Label2" type="Label" parent="Holder"]
margin_left = 83.0
margin_top = 130.0
margin_right = 148.0
margin_bottom = 141.0
text = "Light Moves"

[node name="Label3" type="Label" parent="Holder"]
margin_left = 83.0
margin_top = 185.0
margin_right = 147.0
margin_bottom = 196.0
text = "Music Track"

[node name="Label7" type="Label" parent="Holder"]
margin_left = 82.0
margin_top = 209.0
margin_right = 147.0
margin_bottom = 220.0
text = "Sky Colour"

[node name="ClockTurnsLabel" type="Label" parent="Holder"]
margin_left = 152.0
margin_top = 159.0
margin_right = 217.0
margin_bottom = 170.0
text = "Clock Turns"

[node name="Label4" type="Label" parent="Holder"]
margin_left = 151.0
margin_top = 23.0
margin_right = 213.0
margin_bottom = 34.0
text = "Level Name"

[node name="Label5" type="Label" parent="Holder"]
margin_left = 151.0
margin_top = 50.0
margin_right = 214.0
margin_bottom = 61.0
text = "Level Author"

[node name="Label6" type="Label" parent="Holder"]
margin_left = 151.0
margin_top = 77.0
margin_right = 214.0
margin_bottom = 88.0
text = "Level Replay"

[node name="Label8" type="Label" parent="Holder"]
margin_left = 152.0
margin_top = 234.0
margin_right = 217.0
margin_bottom = 245.0
text = "Setup Replay"

[node name="ClockTurns" type="TextEdit" parent="Holder"]
margin_left = 8.0
margin_top = 150.0
margin_right = 145.0
margin_bottom = 177.0

[node name="LevelName" type="TextEdit" parent="Holder"]
margin_left = 8.0
margin_top = 16.0
margin_right = 145.0
margin_bottom = 43.0

[node name="LevelAuthor" type="TextEdit" parent="Holder"]
margin_left = 8.0
margin_top = 43.0
margin_right = 145.0
margin_bottom = 70.0

[node name="LevelReplay" type="TextEdit" parent="Holder"]
margin_left = 8.0
margin_top = 70.0
margin_right = 145.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( -345, 60 )

[node name="SetupReplay" type="TextEdit" parent="Holder"]
margin_left = 8.0
margin_top = 227.0
margin_right = 145.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 9, 71 )

[node name="SkyColourButton" type="ColorPickerButton" parent="Holder"]
margin_left = 8.0
margin_top = 205.0
margin_right = 142.0
margin_bottom = 245.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Pointer" type="Sprite" parent="Holder"]
